# chaos_crypt

./: README.md  pubspec.yaml
.github/workflows/: release.yml
android/: .gitignore  build.gradle.kts  fixes.gradle
android/app/: build.gradle.kts  upload-keystore.jks
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/kotlin/com/lzu/chaos_crypt/: MainActivity.kt
c/: chaos.cpp  chaos.h  chaos_omp.cpp  crc32.cpp  native_lib.cpp  sha256.cpp  sha256.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/services/: crypto_service.dart  settings_service.dart
lib/core/theme/: app_colors.dart  app_theme.dart
lib/core/utils/: format_utils.dart
lib/screens/: main_shell.dart
lib/screens/benchmark/: benchmark_screen.dart
lib/screens/benchmark/widgets/: benchmark_chart_widget.dart  speed_gauge_widget.dart
lib/screens/file_encrypt/: file_encrypt_screen.dart
lib/screens/settings/: settings_screen.dart
lib/screens/visual_encrypt/: visual_encrypt_screen.dart
lib/screens/visual_encrypt/widgets/: histogram_widget.dart  image_compare_widget.dart
test/: widget_test.dart
